--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,7 +19,14 @@
 				<a href="#">upgrade your browser</a> to improve your experience.
 			</p>
 		<![endif]-->
-
+		<a
+			href="https://github.com/ronsala/resume/raw/main/Ron%20Sala%20Resume.pdf"
+			class="image fit"
+			><img
+				src="https://github.com/ronsala/resume/raw/main/Ron%20Sala%20Resume.pdf"
+				alt="Ron Sala Resume"
+				type="application/pdf"
+		/></a>
 		<script src="" async defer></script>
 	</body>
 </html>
