--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@
 				<a href="#">upgrade your browser</a> to improve your experience.
 			</p>
 		<![endif]-->
-		<a
-			href="https://github.com/ronsala/resume/raw/main/Ron%20Sala%20Resume.pdf"
-			class="image fit"
-			><img
-				src="https://github.com/ronsala/resume/raw/main/Ron%20Sala%20Resume.pdf"
-				alt="Ron Sala Resume"
-				type="application/pdf"
-		/></a>
+		<embed src="https://ronsala.github.io/resume.pdf" type="application/pdf" />
 		<script src="" async defer></script>
 	</body>
 </html>
