--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 				<a href="#">upgrade your browser</a> to improve your experience.
 			</p>
 		<![endif]-->
-		<embed src="https://ronsala.github.io/resume.pdf" type="application/pdf" />
+		<embed
+			src="https://ronsala.github.io/resume/resume.pdf"
+			type="application/pdf"
+		/>
 		<script src="" async defer></script>
 	</body>
 </html>
