--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<a href="#">upgrade your browser</a> to improve your experience.
 			</p>
 		<![endif]-->
+		My Resume
 		<embed
 			src="https://ronsala.github.io/resume/resume.pdf"
 			type="application/pdf"
